--- a/MarketApi/Market.Api.csproj
+++ b/MarketApi/Market.Api.csproj
@@ -9,12 +9,18 @@
   <ItemGroup>
 
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+
+	  <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+
   </ItemGroup>
 
   <ItemGroup>
