--- a/Market.Application/Market.Application.csproj
+++ b/Market.Application/Market.Application.csproj
@@ -19,6 +19,7 @@
 	  <PackageReference Include="AutoMapper" Version="14.0.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2" />
     <ProjectReference Include="..\Market.Domain\Market.Domain.csproj" />
+    <ProjectReference Include="..\RabbitMq\RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
