--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - src/Course2/Tests/**
+      - D:/Projects/Tests/**
       - .github/workflows/run-tests.yml
   workflow_dispatch:
 
@@ -35,7 +35,7 @@ jobs:
           dotnet-version: 9.0.x
 
       - name: Restore dependencies
-        run: dotnet restore Course2/Course2.sln
+        run: dotnet restore MarketApi/MarketApi.sln
 
       - name: Run unit tests
         run: dotnet test 'MarketApi/Market.NUnit/Market.NUnit.csproj' --logger "console;verbosity=detailed" --blame
