--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -38,9 +38,9 @@ jobs:
         run: dotnet restore MarketApi/MarketApi.sln
 
       - name: Run unit tests
-        run: dotnet test 'MarketApi/Market.NUnit/Market.NUnit.csproj' --logger "console;verbosity=detailed" --blame
+        run: dotnet test 'D:/Projects/MarketApi/Market.NUnit/Market.NUnit.csproj' --logger "console;verbosity=detailed" --blame
 
       - name: Run integration tests
         env:
           ConnectionStrings__DefaultConnection: "Server=localhost,1433;Database=MarketDb;User Id=sa;Password=MyS3cureP@ss!;TrustServerCertificate=True;"
-        run: dotnet test 'MarketApi/Market.xUnit.Integration/Market.xUnit.Integration.csproj' --logger "console;verbosity=detailed" --blame
+        run: dotnet test 'D:/Projects/MarketApi/Market.xUnit.Integration/Market.xUnit.Integration.csproj' --logger "console;verbosity=detailed" --blame
