--- a/.github/workflows/service-versioning.yml
+++ b/.github/workflows/service-versioning.yml
@@ -13,7 +13,7 @@ on:
       branch_name:
         required: false
         type: string
-        default: 'main'
+        default: 'master'
     
     outputs:
       version:
@@ -72,7 +72,7 @@ jobs:
           git add .
           git commit -m "Update version to $NEW_VERSION"
           
-          RETRIES=5
+          RETRIES=1
           while [ $RETRIES -gt 0 ]; do
             git fetch origin ${{ inputs.branch_name }}
             echo "${{ inputs.branch_name }}"
@@ -97,7 +97,7 @@ jobs:
             fi
             
             RETRIES=$((RETRIES-1))
-            sleep 5
+            sleep 1
           done
           
           if [ $RETRIES -eq 0 ]; then
