--- a/.github/workflows/service-versioning.yml
+++ b/.github/workflows/service-versioning.yml
@@ -72,13 +72,13 @@ jobs:
           git add .
           git commit -m "Update version to $NEW_VERSION"
           
-          RETRIES=1
+          RETRIES=5
           while [ $RETRIES -gt 0 ]; do
             git fetch origin ${{ inputs.branch_name }}
-            echo "${{ inputs.branch_name }}"
-            # Attempt to merge, capturing the exit code
-            if git merge origin/${{ inputs.branch_name }}; then
-              echo "Merge successful or not needed. Attempting to push..."
+            
+            # Используем git rebase вместо git merge
+            if git rebase origin/${{ inputs.branch_name }}; then
+              echo "Rebase successful. Attempting to push..."
               if git push origin ${{ inputs.branch_name }}; then
                 echo "Push succeeded!"
                 break
@@ -86,18 +86,15 @@ jobs:
                 echo "Push failed, retrying..."
               fi
             else
-              echo "Merge failed. Checking for conflicts..."
-              # Check if a merge conflict exists before trying to abort
-              if git status | grep 'conflict' > /dev/null; then
-                echo "Merge conflict detected. Aborting merge..."
-                git merge --abort
-              else
-                echo "No merge conflict. Local branch is likely up to date. Retrying push..."
-              fi
+              echo "Rebase failed. Resolving conflicts and retrying..."
+              # Здесь можно добавить логику для разрешения конфликтов,
+              # если вы хотите автоматизировать этот процесс.
+              # Например, `git rebase --continue` или `git rebase --abort`
+              git rebase --abort
             fi
             
             RETRIES=$((RETRIES-1))
-            sleep 1
+            sleep 5
           done
           
           if [ $RETRIES -eq 0 ]; then
