--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,13 +1,3 @@
-name: Running all tests
-
-on:
-  pull_request:
-    branches: [ main ]
-    paths:
-      - D:/Projects/**
-      - .github/workflows/run-tests.yml
-  workflow_dispatch:
-
 jobs:
   Testing:
     runs-on: ubuntu-latest
@@ -17,25 +7,32 @@ jobs:
         env:
           SA_PASSWORD: 'MyS3cureP@ss!'
           ACCEPT_EULA: "Y"
-        options: >-
-          --health-cmd "exit 0"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
         ports:
           - 1433:1433
-  
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 8.0.x
 
+      - name: Install sqlcmd
+        run: sudo ACCEPT_EULA=Y apt-get install -y mssql-tools18 unixodbc-dev
+
+      - name: Wait for SQL Server
+        run: |
+          for i in {1..30}; do
+            /opt/mssql-tools18/bin/sqlcmd -S sqlserver -U SA -P 'MyS3cureP@ss!' -C -Q "SELECT 1" && break
+            echo "SQL Server is starting up, waiting..."
+            sleep 5
+          done
+
       - name: Restore dependencies
         run: dotnet restore MarketApi/MarketApi.sln
+
+      - name: Run EF migrations
+        run: dotnet ef database update --project MarketApi/MarketApi.csproj --connection "Server=sqlserver;Database=MarketDB;User Id=SA;Password=MyS3cureP@ss!;TrustServerCertificate=True"
 
       - name: Run unit tests
         run: dotnet test 'Market.NUnit/Market.NUnit.csproj' --logger "console;verbosity=detailed" --blame
