--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,3 +1,13 @@
+name: Running all tests
+
+on:
+  pull_request:
+    branches: [ main ]
+    paths:
+      - D:/Projects/**
+      - .github/workflows/run-tests.yml
+  workflow_dispatch:
+
 jobs:
   Testing:
     runs-on: ubuntu-latest
