--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,7 +2,7 @@ name: Running all tests
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - D:/Projects/**
       - .github/workflows/run-tests.yml
@@ -15,17 +15,16 @@ jobs:
       sqlserver:
         image: mcr.microsoft.com/mssql/server:2022-latest
         env:
-          SA_PASSWORD: "MyS3cureP@ss!"
+          SA_PASSWORD: 'MyS3cureP@ss!'
           ACCEPT_EULA: "Y"
-          MSSQL_PID: "Express"
-        ports:
-          - 1433:1433
         options: >-
-          --health-cmd "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'MyS3cureP@ss!' -Q 'SELECT 1' || exit 1"
+          --health-cmd "exit 0"
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 10
-
+          --health-retries 5
+        ports:
+          - 1433:1433
+  
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
