--- a/MarketApi/Market.Api.csproj
+++ b/MarketApi/Market.Api.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<Version>1.0.13</Version>
+	<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<UserSecretsId>8328344b-7d46-4905-a4f4-78f945e0733e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +14,8 @@
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+
+	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
 
 	  <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 
