--- a/Market.Application/Market.Application.csproj
+++ b/Market.Application/Market.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+	  <PackageReference Include="iTextSharp" Version="5.5.13.4" />
 	  <PackageReference Include="Mapster" Version="7.4.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
@@ -17,6 +18,7 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="AutoMapper" Version="14.0.0" />
+	  <PackageReference Include="QuestPDF" Version="2025.7.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2" />
     <ProjectReference Include="..\Market.Domain\Market.Domain.csproj" />
     <ProjectReference Include="..\RabbitMq\RabbitMq.csproj" />
